INTERLOK-3748 Adding tests for resolving endpoints.  Fixing up warnings.